# NetHack

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .mailmap  .travis.yml  1  CMakeLists.txt  Changelog  Cross-compiling  Files  New_Player_Guide  Porting  README  azure-pipelines.yml  install.sh  objnam.c  test_des.lua  x.lua  y.lua
DEVEL/: .gitattributes  .gitattributes.swp  Developer.txt  code_features.txt  code_style.txt  git_recipes.txt  gitinfo.pl  nhgitset.pl
DEVEL/hooksdir/: .NHgithook.pm.swp  NHadd  NHgithook.pm  NHsubst  NHtext  TARGET  applypatch-msg  commit-msg  nhsub  post-applypatch  post-checkout  post-commit  post-merge  post-rewrite  pre-applypatch  pre-auto-gc  pre-commit  pre-push  pre-rebase  prepare-commit-msg
dat/: .gitattributes  .gitignore  Arc-fila.lua  Arc-filb.lua  Arc-goal.lua  Arc-loca.lua  Arc-strt.lua  Arch.des  Bar-fila.lua  Bar-filb.lua  Bar-goal.lua  Bar-loca.lua  Bar-strt.lua  Barb.des  CMakeLists.txt  Cartomancer.des  Cav-fila.lua  Cav-filb.lua  Cav-goal.lua  Cav-loca.lua  Cav-strt.lua  Caveman.des  Drag.des  GENFILES  Hea-fila.lua  Hea-filb.lua  Hea-goal.lua  Hea-loca.lua  Hea-strt.lua  Healer.des  Kni-fila.lua  Kni-filb.lua  Kni-goal.lua  Kni-loca.lua  Kni-strt.lua  Knight.des  Mer-fila.lua  Mer-filb.lua  Mer-goal.lua  Mer-loca.lua  (+153 more)
doc/: .gitattributes  .gitignore  Gbk-1pg-pfx.mn  Gbk-1pg-sfx.mn  Guidebook.mn  Guidebook.tex  Guidebook.txt  archives  buglist  config.nh  consent.txt  dgn_comp.6  dgn_comp.txt  direct.tre  dlb.6  dlb.txt  fixes-mHack.txt  fixes1-0.txt  fixes10.0  fixes14.f  fixes2-2-0.txt  fixes2-2.txt  fixes2-3-e.txt  fixes22.0  fixes23.e  fixes3-0-pl01.txt  fixes3-0-pl05.txt  fixes3-0-pl08.txt  fixes3-0-pl10.txt  fixes3-1-1.txt  fixes3-1-2.txt  fixes3-2-0.txt  fixes3-2-1.txt  fixes3-2-2.txt  fixes3-2-3.txt  fixes3-3-0.txt  fixes3-4-0.txt  fixes3-4-1.txt  fixes3-4-2.txt  fixes3-4-3.txt  (+61 more)
include/: .gitattributes  .gitignore  align.h  amiconf.h  artifact.h  artilist.h  attrib.h  beconf.h  bitmfile.h  botl.h  color.h  config.h  config1.h  context.h  coord.h  cstd.h  decl.h  def_os2.h  defsym.h  dgn_file.h  display.h  dlb.h  dungeon.h  edog.h  emin.h  engine.h  engrave.h  epri.h  eshk.h  extern.h  flag.h  fmod.cs  fmod.h  fmod.hpp  fmod_codec.h  fmod_common.h  fmod_dsp.cs  fmod_dsp.h  fmod_dsp_effects.h  fmod_errors.cs  (+97 more)
lib/: fmod_vc.lib
outdated/: .gitattributes  .travis.yml
outdated/include/: .gitattributes  amiconf.h  beconf.h  bitmfile.h  gem_rsc.h  macconf.h  mactty.h  macwin.h  os2conf.h  system.h  tosconf.h  wceconf.h
scripts/: devpack.sh  msunpack.bat  pack.sh  unpack.sh  vmsunpack.com
sound/fmod/: fmod.c
sound/macsound/: macsound.m
sound/qtsound/: README.md
sound/wav/: .gitignore  README  attributions.txt  sa2_xpleveldown.uu  sa2_xplevelup.uu  se_squeak_A.uu  se_squeak_B.uu  se_squeak_B_flat.uu  se_squeak_C.uu  se_squeak_D.uu  se_squeak_D_flat.uu  se_squeak_E.uu  se_squeak_E_flat.uu  se_squeak_F.uu  se_squeak_F_sharp.uu  se_squeak_G.uu  se_squeak_G_sharp.uu  sound_Bell.uu  sound_Bugle_A.uu  sound_Bugle_B.uu  sound_Bugle_C.uu  sound_Bugle_D.uu  sound_Bugle_E.uu  sound_Bugle_F.uu  sound_Bugle_G.uu  sound_Drum_Of_Earthquake.uu  sound_Fire_Horn.uu  sound_Frost_Horn.uu  sound_Leather_Drum.uu  sound_Magic_Flute_A.uu  sound_Magic_Flute_B.uu  sound_Magic_Flute_C.uu  sound_Magic_Flute_D.uu  sound_Magic_Flute_E.uu  sound_Magic_Flute_F.uu  sound_Magic_Flute_G.uu  sound_Magic_Harp_A.uu  sound_Magic_Harp_B.uu  sound_Magic_Harp_C.uu  sound_Magic_Harp_D.uu  (+26 more)
sound/windsound/: windsound.c
src/: .depend  .gitattributes  .gitignore  Makefile.mingw32  Makefile.mingw32.depend  allmain.c  alloc.c  apply.c  artifact.c  attrib.c  ball.c  bones.c  botl.c  calendar.c  cmd.c  coloratt.c  date.c  dbridge.c  decl.c  detect.c  dig.c  display.c  dlb.c  do.c  do_name.c  do_wear.c  dog.c  dogmove.c  dokick.c  dothrow.c  drawing.c  dungeon.c  eat.c  end.c  engine.c  engrave.c  exper.c  explode.c  extralev.c  files.c  (+98 more)
submodules/: CHKSUMS
sys/amiga/: .gitattributes  Build.ami  Install.ami  Makefile.agc  Makefile.ami  NetHack.cnf  amibug  amidos.c  amidos.p  amigst.c  amii.hlp  amimenu.c  amirip.c  amisnd.c  amistack.c  amitty.c  amiwind.c  amiwind.p  ask.uu  clipwin.c  clipwin.uu  colors.uu  colorwin.c  cvtsnd.c  ifchange  mkdmake  scroll.uu  string.uu  txt2iff.c  winami.c  winami.p  winchar.c  windefs.h  winext.h  winfuncs.c  winkey.c  winmenu.c  winproto.h  winreq.c  winstr.c  (+1 more)
sys/atari/: .gitattributes  Install.tos  atari.cnf  nethack.mnu  setup.g  tos.c
sys/be/: .gitattributes  README  bemain.c
sys/cygwin/: .gitattributes  .gitignore  README.cygwin  cygwin_hints  setup.sh
sys/lib/: Makefile.src  Makefile.top  Makefile.utl  README.md  libnethackmain.c  mkmkfile.sh  setup.sh  sysconf
sys/libnh/: README.md  libnhmain.c  sysconf
sys/mac/: .gitattributes  Files.r  Install.mw  MacHelp  NHDeflts  NHrsrc.hqx  News  README  carbon.plist  dprintf.c  maccurs.c  macerrs.c  macfile.c  machelp.hqx  macmain.c  macmenu.c  macsnd.c  mactopl.c  mactty.c  macunix.c  macwin.c  mgetline.c  mmodal.c  mrecover.c  mrecover.hqx  mttymain.c
sys/msdos/: .gitattributes  Install.dos  Makefile.BC  Makefile.CROSS  Makefile.GCC  Makefile.MSC  Makefile.SC  Makefile1.cross  Makefile2.cross  NHAccess.nh  SCHEMA35.MSC  compwarn.lst  def2mak.c  exceptn.S.patch  fetch-cross-compiler.sh  font.c  font.h  genschem.l  msdos-cross-compile.sh  msdos.c  msdoshlp.txt  nhico.uu  nhlua.h  nhpif.uu  ovlinit.c  pckeys.c  pctiles.c  pctiles.h  pcvideo.h  portio.h  prebuild.mak  schema1  schema1.BC  schema2  schema2.BC  schema3  schema3.MSC  setup.bat  setup.sh  sound.c  (+9 more)
sys/os2/: .gitattributes  Install.os2  os2.c  (+2 more)
test/: .gitattributes  test_cnf.lua  test_des.lua  test_lev.lua  test_obj.lua  test_sel.lua  test_shk.lua  test_src.lua  testmove.lua  testwish.lua
util/: .gitattributes  .gitignore  CMakeLists.txt  dgn_comp.l  dgn_comp.y  dgn_main.c  dlb.sln  dlb_main  dlb_main.c  heaputil.c  lev_comp.l  lev_comp.y  lev_main.c  lev_main.i  makedefs.c  mdgrep.h  mdgrep.pl  panic.c  readtags.c  recover.c
util/clang/: compat.h  opvars-plugin.cpp  plugin-Makefile
(+1003 files in other folders)
